--- a/css/media.css
+++ b/css/media.css
@@ -318,7 +318,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   .content_body {
-    background-color: rgba(0, 0, 0, 0.1647058824);
+    display: none;
   }
 }
 @media (min-width: 991px) {
