--- a/css/media.css
+++ b/css/media.css
@@ -316,6 +316,10 @@ h1, h2, h3, h4, h5, h6 {
     -ms-grid-row: 7;
     -ms-grid-column: 2;
   }
+
+  .content_body {
+    display: none;
+  }
 }
 @media (min-width: 991px) {
   .menu__list {
