--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ body._lock {
 }
 
 .page {
- 
+  padding-top: 70px;
   width: 100%;
 }
 
@@ -179,7 +179,7 @@ body._lock {
   top: 0;
   left: 0;
   width: 100%;
-  min-height: 100%;
+  height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
