--- a/css/header.css
+++ b/css/header.css
@@ -150,7 +150,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .menu__list {
-  height: 35px;
+  height: 36px;
+}
+
+.menu__list > li > a {
+  margin-top: 2px;
 }
 
 .menu__link {
@@ -159,7 +163,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #ffffff;
   font-size: 14px;
   text-transform: uppercase;
-  padding: 5px;
+  padding: 6px 6px 4px 6px;
 }
 
 .menu__link:hover {
