--- a/css/style.css
+++ b/css/style.css
@@ -771,8 +771,19 @@ body._lock {
   height: 70px;
 }
 .view_more_btn h3 {
-  font-size: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 20px;
+  font-size: 12px;
   text-transform: uppercase;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 4px;
 }
 
 .view_more_btn:hover {
