--- a/css/media.css
+++ b/css/media.css
@@ -103,6 +103,14 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   font-style: normal;
 }
+@media (min-width: 1900px) {
+  .full_screen__video {
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
 @media (max-width: 991px) {
   .menu__icon {
     z-index: 5;
@@ -235,10 +243,10 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   .img_block_1 {
-    background: url(/img/test_img_1.jpeg) 0 50%/cover no-repeat;
+    background: url("/img/section_1/img_1_section_1.jpeg") 0 70%/cover no-repeat;
     width: 100%;
-    min-height: 400px;
-    margin: 0 0 10px 0;
+    min-height: 500px;
+    margin: 0 0 20px 0;
   }
 
   .img_block_2 {
@@ -246,10 +254,10 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   .img_block_3 {
-    background: url(/img/test_img_2.jpeg) 0 50%/cover no-repeat;
+    background: url("/img/section_1/img_2_section_1.jpg") 0 50%/cover no-repeat;
     width: 100%;
-    height: 400px;
-    margin: 0 0 10px 0;
+    height: 500px;
+    margin: 0 0 20px 0;
   }
 
   .partners_grid_container {
@@ -333,6 +341,39 @@ h1, h2, h3, h4, h5, h6 {
 
   .content_body {
     display: none;
+  }
+
+  .logo_banner_block {
+    display: none;
+  }
+
+  .logo_banner_block_mobile {
+    position: relative;
+    display: block;
+    background: url("/img/bg_section_1.jpg") 50% 50%/cover no-repeat;
+    min-height: 700px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+
+  .logo_banner_block_video {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+
+  .full_screen__video {
+    position: relative;
+    width: 90%;
+    margin: 20px;
   }
 }
 @media (min-width: 991px) {
