--- a/media.css
+++ b/media.css
@@ -265,8 +265,8 @@ h1, h2, h3, h4, h5, h6 {
     display: grid;
     -ms-grid-columns: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
-    -ms-grid-rows: 100px 100px 100px 100px 100px 100px 100px;
-    grid-template-rows: 100px 100px 100px 100px 100px 100px 100px;
+    -ms-grid-rows: 100px 100px 100px 100px 100px 100px;
+    grid-template-rows: 100px 100px 100px 100px 100px 100px;
   }
 
   .partners_grid_container > *:nth-child(1) {
@@ -326,16 +326,6 @@ h1, h2, h3, h4, h5, h6 {
 
   .partners_grid_container > *:nth-child(12) {
     -ms-grid-row: 6;
-    -ms-grid-column: 2;
-  }
-
-  .partners_grid_container > *:nth-child(13) {
-    -ms-grid-row: 7;
-    -ms-grid-column: 1;
-  }
-
-  .partners_grid_container > *:nth-child(14) {
-    -ms-grid-row: 7;
     -ms-grid-column: 2;
   }
 
@@ -463,8 +453,8 @@ h1, h2, h3, h4, h5, h6 {
     display: grid;
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
-    -ms-grid-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
-    grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
+    -ms-grid-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
+    grid-template-rows: 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px 100px;
   }
   .partners_grid_container > *:nth-child(1) {
     -ms-grid-row: 1;
@@ -512,10 +502,6 @@ h1, h2, h3, h4, h5, h6 {
   }
   .partners_grid_container > *:nth-child(12) {
     -ms-grid-row: 12;
-    -ms-grid-column: 1;
-  }
-  .partners_grid_container > *:nth-child(13) {
-    -ms-grid-row: 13;
     -ms-grid-column: 1;
   }
 }
