--- a/css/style.css
+++ b/css/style.css
@@ -604,25 +604,42 @@ body._lock {
           justify-content: space-between;
 }
 
-.product_fish_cut {
+.product_container {
   margin: 0 auto;
   padding: 10px;
+  max-width: 200px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 .image_product {
-  max-width: 250px;
+  max-width: 100%;
 }
 
 .title_product {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   font-family: "GothamPro";
   font-weight: 400;
-  max-width: 250px;
-  font-size: 16px;
+  max-width: 100%;
+  font-size: 14px;
   line-height: 1.2;
   color: #000000;
   text-align: center;
-  padding: 10px;
-  height: 80px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 15px;
+  height: 90px;
   background-color: rgba(221, 218, 218, 0.9529411765);
 }
 
