--- a/css/media.css
+++ b/css/media.css
@@ -366,6 +366,11 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     margin: 20px 0;
   }
+
+  .about_block_title {
+    font-size: 20px;
+    line-height: 1.2;
+  }
 }
 @media (min-width: 991px) {
   .menu__list {
@@ -471,7 +476,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   .about_block_title {
-    font-size: 24px;
+    font-size: 18px;
     line-height: 1.2;
   }
 
