--- a/css/media.css
+++ b/css/media.css
@@ -103,12 +103,12 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 700;
   font-style: normal;
 }
-@media (min-width: 1900px) {
+@media (min-width: 1860px) {
   .full_screen__video {
     top: 0;
     left: 0;
     max-width: 100%;
-    max-height: 100%;
+    max-height: 700px;
   }
 }
 @media (max-width: 991px) {
