--- a/css/products.css
+++ b/css/products.css
@@ -120,6 +120,10 @@ h1, h2, h3, h4, h5, h6 {
           justify-content: flex-start;
 }
 
+._mod_products_container {
+max-width: 1200px;
+}
+
 .product_container-product_page {
   max-width: 300px;
 }
