--- a/css/media.css
+++ b/css/media.css
@@ -104,16 +104,15 @@ h1, h2, h3, h4, h5, h6 {
   font-style: normal;
 }
 @media (min-width: 1600px) {
-  
-  .logo_banner_block {
-    position: relative;
-    min-height: 700px;}
-  
   .full_screen__video {
     top: 0;
     left: 0;
     max-width: 100%;
-    max-height: 700px;
+    max-height: 100%;
+  }
+
+  .logo_banner_block {
+    min-height: 800px;
   }
 }
 @media (max-width: 991px) {
