--- a/css/partners.css
+++ b/css/partners.css
@@ -114,8 +114,8 @@ body {
 }
 
 .title_partners_name {
-  font-family: "Amatic SC", cursive;
-  font-size: 48px;
+  font-family: "GothamPro";
+  font-size: 32px;
   text-align: start;
   font-weight: 700;
   padding: 10px;
