--- a/footer.css
+++ b/footer.css
@@ -91,6 +91,20 @@ h1, h2, h3, h4, h5, h6 {
 
 /*--------------------*/
 /*Обнуление*/
+@font-face {
+  font-family: "GothamPro";
+  src: url("/fonts/GothamPro.eot");
+  src: local("☺"), url("/fonts/GothamPro.woff") format("woff"), url("/fonts/GothamPro.ttf") format("truetype"), url("/fonts/GothamPro.svg") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "GothamPro";
+  src: url("/fonts/GothamPro-Bold.eot");
+  src: local("☺"), url("/fonts/GothamPro-Bold.woff") format("woff"), url("/fonts/GothamPro-Bold.ttf") format("truetype"), url("/fonts/GothamPro-Bold.svg") format("svg");
+  font-weight: 700;
+  font-style: normal;
+}
 .footer {
   background-color: #111;
   width: 100%;
@@ -145,6 +159,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .inst_icon {
+  width: 30px;
+  height: 30px;
   margin: 5px;
 }
 
@@ -154,35 +170,14 @@ h1, h2, h3, h4, h5, h6 {
   display: block;
 }
 .contact_block p {
+  font-family: "GothamPro";
   display: block;
   padding: 5px;
   font-size: 16px;
-  font-weight: 300;
+  font-weight: 400;
 }
 .contact_block p span {
-  font-family: "Amatic SC", cursive;
-  font-size: 18px;
+  font-family: "GothamPro";
+  font-size: 16px;
   font-weight: 700;
-}
-
-@media (max-width: 767px) {
-  .footer {
-    display: block;
-    padding: 30px 20px;
-  }
-
-  .logo_block_footer {
-    width: 100%;
-    margin: 0 0 20px 0;
-  }
-
-  .social_network_icons_block {
-    width: 100%;
-    margin: 0 0 20px 0;
-  }
-
-  .contact_block {
-    width: 100%;
-    text-align: center;
-  }
 }
