--- a/css/footer.css
+++ b/css/footer.css
@@ -177,7 +177,7 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
 }
 .contact_block p span {
-  font-family: "Amatic SC", cursive;
-  font-size: 18px;
+  font-family: "GothamPro";
+  font-size: 16px;
   font-weight: 700;
 }
