--- a/css/style.css
+++ b/css/style.css
@@ -659,7 +659,7 @@ body._lock {
 .partners_block {
   max-width: 1200px;
   margin: 0 auto;
-  padding: 75px 0 0 0;
+  padding: 75px 0;
 }
 
 .partners_grid_container {
@@ -833,15 +833,18 @@ body._lock {
 }
 
 .page__section_6 {
-  max-width: 900px;
-  margin: 0 auto;
+  width: 100%;
+  background-color: #000000;
 }
 
 .about_container {
+  border-bottom: 1px solid #8f8f8f;
+  max-width: 900px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  padding-top: 70px;
+  padding: 70px 10px 0 10px;
+  margin: 0 auto;
 }
 
 .about_block_img {
@@ -850,7 +853,7 @@ body._lock {
 }
 
 .about_img {
-  max-width: 400px;
+  max-width: 300px;
 }
 
 .about_block_text {
@@ -879,7 +882,7 @@ body._lock {
 .about_block_title {
   font-family: "GothamPro";
   font-weight: 500;
-  font-size: 28px;
+  font-size: 16px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -890,13 +893,14 @@ body._lock {
       -ms-flex-pack: center;
           justify-content: center;
   min-width: 100%;
+  padding: 0 30px;
   padding-bottom: 30px;
 }
 
 .about_block_subtitle {
   font-family: "GothamPro";
   font-weight: 400;
-  font-size: 18px;
+  font-size: 14px;
   min-width: 100%;
   text-align: end;
 }
