--- a/css/media.css
+++ b/css/media.css
@@ -108,7 +108,7 @@ h1, h2, h3, h4, h5, h6 {
     top: 0;
     left: 0;
     max-width: 100%;
-    max-height: 700px;
+    height: 700px;
 
   }
   
@@ -117,7 +117,7 @@ h1, h2, h3, h4, h5, h6 {
   }
 
   .logo_banner_block {
-    max-height: 700px;
+   height: 700px;
   }
 }
 @media (max-width: 991px) {
