--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ body._lock {
 
 .logo_banner_block {
   position: relative;
-  min-height: 100vh;
+  /* min-height: 100vh; */
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
