--- a/css/media.css
+++ b/css/media.css
@@ -387,6 +387,7 @@ h1, h2, h3, h4, h5, h6 {
 
   .logo_banner_block_video {
     width: 100%;
+    max-height: 200px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
