--- a/css/media.css
+++ b/css/media.css
@@ -109,15 +109,14 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     max-width: 100%;
     height: 800px;
-
   }
-  
+
   .content_body {
     height: 800px;
   }
 
   .logo_banner_block {
-   height: 800px;
+    height: 800px;
   }
 
   .video_block {
@@ -132,21 +131,20 @@ h1, h2, h3, h4, h5, h6 {
     left: 0;
     max-width: 100%;
     height: 800px;
-
   }
-  
+
   .content_body {
     height: 800px;
   }
 
   .logo_banner_block {
-   height: 800px;
+    height: 800px;
   }
 
   .video_block {
     position: absolute;
     width: 100%;
-    height: 100%;
+    height: 800px;
   }
 }
 @media (max-width: 991px) {
@@ -242,9 +240,9 @@ h1, h2, h3, h4, h5, h6 {
   .menu__body::before {
     content: "";
     position: fixed;
-    width: 100%;
     top: 0;
     left: 0;
+    padding: 0 20px;
     height: 70px;
     background-color: #111111;
   }
@@ -399,10 +397,8 @@ h1, h2, h3, h4, h5, h6 {
     padding: 20px;
   }
 
-  .full_screen__video {
-    position: relative;
+  .full_screen__video_mobile {
     width: 100%;
-    max-height: 400px;
     margin: 20px 0;
   }
 
